aligning the contact form

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <section>
             <h2>Contact</h2>
             <ul class="contact">
-                <li>email: ejg132@gmail.com</li>
+                <li id="email">email: ejg132@gmail.com</li>
                 <div class="contactIcon">
                     <li><a href="https://github.com/EJ132?tab=repositories">
                         <img src="./Images/githubIcon.png"></a>
