--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.css">
     <link rel="stylesheet" type="text/css" href="hamburger.css">
     <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="desktop.css">
 </head>
 
 <body>
     <nav role="navigation">
         <img class="navName" src="Images/laptopIcon.png">
+        <div class="desktopNav">
+                <li><a href="#ProjectsDesktop">Projects</a></li>
+                <li><a href="#SkillDesktop">Skills</a></li>
+                <li><a href="#aboutMeDesktop">About Me</a></li>
+                <li><a href="#contactDesktop">Contact</a></li>
+        </div>
     </nav>
     <div class="menu-wrap">
         <input type="checkbox" class="toggler">
@@ -42,12 +49,12 @@
             </div>
         </header>
 
-        <section>
+        <section id="ProjectsDesktop">
             <h2 id="title">Projects</h2>
             <div class="projects">
                 <div class="project">
                     <h3>BookMe</h3>
-                    <img class="projectImg" src="./Images/BookMe.png">
+                    <div id="imageResize"><img class="projectImg imgSize" id="carImg" src="./Images/BookMe.png"></div>
                     <div class="skillSetUsed">
                         <li id="skillsUsed">HTML5</li>
                         <li id="skillsUsed">CSS3</li>
@@ -69,7 +76,7 @@
                 </div>
                 <div class="project">
                     <h3>Quiz App</h3>
-                    <img class="projectImg" src="./Images/QuizApp.png">
+                    <div id="imageResize"><img class="projectImg" id="carImg" src="./Images/Around The World.png"></div>
                     <div class="skillSetUsed">
                         <li id="skillsUsed">HTML5</li>
                         <li id="skillsUsed">CSS3</li>
@@ -89,34 +96,36 @@
             </div>
         </section>
 
-        <section>
+        <section id="SkillDesktop">
             <h2 id="title">Skills</h2>
             <ul id="aboutMe" class="skills">
-                <img src="./Images/htmlIcon.png" class="skillsList">
-                <img src="./Images/cssIcon.png" class="skillsList">
-                <img src="./Images/jsIcon.png" class="skillsList">
+                <img alt="html icon image" src="./Images/htmlIcon.png" class="skillsList">
+                <img alt="css icon image" src="./Images/cssIcon.png" class="skillsList">
+                <img alt="javascript icon image" src="./Images/jsIcon.png" class="skillsList">
+                <img alt="jQuery icon image" src="./Images/jquery.png" class="skillsList" id="jqueryIcon">
             </ul>
         </section>
 
-        <section>
+        <section id="aboutMeDesktop">
             <h2 id="title">About Me</h2>
             <img id="aboutMeIcon" alt="icon of person" src="./Images/boy.png">
-            <p id="aboutMeBio">Hey there, my name is EJ Gonzalez. I am a passionate energetic coding enthusiast who
-                loves to
-                create web applications. I graduated from Thinkful Inc. Engineering Immersion program but, aside from
-                coding some of my hobbies include exercising, golfing and playing video games.
+            <p id="aboutMeBio">
+                Hey there, my name is EJ Gonzalez. I am a passionate energetic coding enthusiast who
+                loves to create web applications. I graduated from the Thinkful Inc. Engineering Immersion program but, aside from
+                coding, I am eager to demonstrate my leadership abilities, and work on various projects with a team that shares my 
+                passions.
             </p>
         </section>
 
-        <section>
+        <section id="contactDesktop">
             <h2 id="contact" id="title">Contact</h2>
             <ul class="contact">
                 <li id="email">email: ejg132@gmail.com</li>
                 <div class="contactIcon">
                     <li><a href="https://github.com/EJ132?tab=repositories">
-                        <img src="./Images/githubIcon.png"></a>
+                        <img alt="github icon image" src="./Images/githubIcon.png"></a>
                     </li>
-                    <li><a href="https://www.linkedin.com/in/ej-gonzalez-2b1492187">
+                    <li><a alt="linkedIn icon image" href="https://www.linkedin.com/in/ej-gonzalez-2b1492187">
                         <img src="./Images/linkedinIcon.png"></a>
                     </li>
                 </div>
