--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
         </section>
 
         <section id="contactDesktop">
-            <h2 id="contact" id="title">Contact</h2>
-            <ul class="contact">
+            <h2 id="title">Contact</h2>
+            <ul class="contact" id="contact">
                 <li id="email">email: ejg132@gmail.com</li>
                 <div class="contactIcon">
                     <li><a href="https://github.com/EJ132?tab=repositories">
