some grammar fix!

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         <li id="skillsUsed">jQuery</li>
                         <li id="skillsUsed">Ajax</li>
                     </div>
-                    <p>BookMe allows you to add your favorite or worst books
-                        to a database where your bookmarks are saved. If you are trying to share your
+                    <p>BookMe was my first application and it allows you to add your favorite or worst books
+                        to an API where your bookmarks are saved. If you are trying to share your
                         experience with a good or bad book visit the site. This was built for the sole purpose of
                         practice.</p>
 
@@ -111,9 +111,11 @@
             <img id="aboutMeIcon" alt="icon of person" src="./Images/boy.png">
             <p id="aboutMeBio">
                 Hey there, my name is EJ Gonzalez. I am a passionate energetic coding enthusiast who
-                loves to create web applications. I graduated from the Thinkful Inc. Engineering Immersion program but, aside from
-                coding, I am eager to demonstrate my leadership abilities, and work on various projects with a team that shares my 
-                passions.
+                loves to create web applications. I graduated from Thinkful Inc. Engineering Immersion 
+                program. Due to the many hobbies I include myself in I have been able to attain a valuable 
+                skill set. Assiduous, focused, and determined, are only the start of describing me but 
+                aside from that, I am eager to demonstrate my leadership abilities and work on various 
+                projects with a team that shares my passions.
             </p>
         </section>
 
