--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <h1 class="nameHeader">EJ Gonzalez</h1>
             <div id="Projects" class="headerStatement">
-                <h2 id="headerh2"><span id="inovating">Inovating</span> your ideas into reality...</h2>
+                <h2 id="headerh2"><span id="inovating">Inovating</span> your ideas into reality with Full-Stack Development...</h2>
             </div>
         </header>
 
