--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 Hey there, my name is EJ Gonzalez. I am a passionate energetic coding enthusiast who
                 loves to create web applications. I graduated from Thinkful Inc. Engineering Immersion 
                 program. Due to the many hobbies I include myself in I have been able to attain a valuable 
-                skill set. Assiduous, focused, and determined, are only the start of describing me but 
-                aside from that, I am eager to demonstrate my leadership abilities and work on various 
+                skill set. Assiduous, focused, and determined are only the start of describing me but,
+                I am eager to demonstrate my leadership abilities and work on various 
                 projects with a team that shares my passions.
             </p>
         </section>
