--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <nav role="navigation">
         <img class="navName" src="Images/laptopIcon.png">
         <div class="desktopNav">
-                <li><a href="#ProjectsDesktop">Projects</a></li>
-                <li><a href="#SkillDesktop">Skills</a></li>
-                <li><a href="#aboutMeDesktop">About Me</a></li>
-                <li><a href="#contactDesktop">Contact</a></li>
+            <li><a href="#ProjectsDesktop">Projects</a></li>
+            <li><a href="#SkillDesktop">Skills</a></li>
+            <li><a href="#aboutMeDesktop">About Me</a></li>
+            <li><a href="#contactDesktop">Contact</a></li>
         </div>
     </nav>
     <div class="menu-wrap">
@@ -45,7 +45,8 @@
 
             <h1 class="nameHeader">EJ Gonzalez</h1>
             <div id="Projects" class="headerStatement">
-                <h2 id="headerh2"><span id="inovating">Inovating</span> your ideas into reality with Full-Stack Development...</h2>
+                <h2 id="headerh2"><span id="inovating">Inovating</span> your ideas into reality with Full-Stack
+                    Development...</h2>
             </div>
         </header>
 
@@ -54,7 +55,16 @@
             <div class="projects">
                 <div class="project">
                     <h3>BookMe</h3>
-                    <div id="imageResize"><img class="projectImg imgSize" id="carImg" src="./Images/BookMe.png"></div>
+                    <div id="imageResize">
+                        <div class="middleDesktop">
+                            <button id="live"><a
+                                    href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/">Live</a></button>
+                            <button id="repo"><a
+                                    href="https://github.com/thinkful-ei-gecko/EJ-Bookmark-App">Repo</a></button>
+                        </div>
+
+                        <img class="projectImg imgSize" id="carImg" src="./Images/BookMe.png">
+                    </div>
                     <div class="skillSetUsed">
                         <li id="skillsUsed">HTML5</li>
                         <li id="skillsUsed">CSS3</li>
@@ -66,17 +76,25 @@
                         experience with a good or bad book visit the site. This was built for the sole purpose of
                         practice.</p>
 
-                    <div class="middle">
-                        <button id="live"><a
-                                href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/">Live</a></button>
-                        <button id="repo"><a
-                                href="https://github.com/thinkful-ei-gecko/EJ-Bookmark-App">Repo</a></button>
-                    </div>
+                        <div class="middle">
+                                <button id="live"><a
+                                        href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/">Live</a></button>
+                                <button id="repo"><a
+                                        href="https://github.com/thinkful-ei-gecko/EJ-Bookmark-App">Repo</a></button>
+                        </div>
 
                 </div>
                 <div class="project">
                     <h3>Quiz App</h3>
-                    <div id="imageResize"><img class="projectImg" id="carImg" src="./Images/Around The World.png"></div>
+                    <div id="imageResize">
+                        <div id="Skills" class="middleDesktop">
+                            <button id="live"><a
+                                    href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/">Live</a></button>
+                            <button id="repo"><a
+                                    href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App">Repo</a></button>
+                        </div>
+                        <img class="projectImg" id="carImg" src="./Images/Around The World.png">
+                    </div>
                     <div class="skillSetUsed">
                         <li id="skillsUsed">HTML5</li>
                         <li id="skillsUsed">CSS3</li>
@@ -85,11 +103,12 @@
                     <p>Simple quiz application where you can test your car knowledge on where they
                         originate from. Built for anyone that wants to expand their car IQ and sound like a
                         pro when talking about cars.</p>
-                    <div id="Skills" class="middle">
-                        <button id="live"><a
-                                href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/">Live</a></button>
-                        <button id="repo"><a
-                                href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App">Repo</a></button>
+
+                    <div id="SkillsDesktop" class="middle">
+                                <button id="live"><a
+                                        href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/">Live</a></button>
+                                <button id="repo"><a
+                                        href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App">Repo</a></button>
                     </div>
 
                 </div>
@@ -111,10 +130,11 @@
             <img id="aboutMeIcon" alt="icon of person" src="./Images/boy.png">
             <p id="aboutMeBio">
                 Hey there, my name is EJ Gonzalez. I am a passionate energetic coding enthusiast who
-                loves to create web applications. I graduated from Thinkful Inc. Engineering Immersion 
-                program. Due to the many hobbies I include myself in I have been able to attain a valuable 
+                loves to create web applications. I graduated from Thinkful Inc. Engineering Immersion
+                program. Due to my past experience managing and the many hobbies I include myself in I have been able to
+                attain a valuable
                 skill set. Assiduous, focused, and determined are only the start of describing me but,
-                I am eager to demonstrate my leadership abilities and work on various 
+                I am eager to demonstrate my leadership abilities and work on various
                 projects with a team that shares my passions.
             </p>
         </section>
@@ -125,10 +145,10 @@
                 <li id="email">email: ejg132@gmail.com</li>
                 <div class="contactIcon">
                     <li><a href="https://github.com/EJ132?tab=repositories">
-                        <img alt="github icon image" src="./Images/githubIcon.png"></a>
+                            <img alt="github icon image" src="./Images/githubIcon.png"></a>
                     </li>
                     <li><a alt="linkedIn icon image" href="https://www.linkedin.com/in/ej-gonzalez-2b1492187">
-                        <img src="./Images/linkedinIcon.png"></a>
+                            <img src="./Images/linkedinIcon.png"></a>
                     </li>
                 </div>
 
