--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <nav role="navigation">
-        <img class="navName" src="Images/laptopIcon.png">
+        <a id="homeImage" href="#topPage"><img class="navName" src="Images/laptopIcon.png"></a>
         <div class="desktopNav">
             <li><a href="#ProjectsDesktop">Projects</a></li>
             <li><a href="#SkillDesktop">Skills</a></li>
