fixed all erros

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
     <nav>
         <a id="homeImage" href="#topPage"><img class="navName" alt="laptop icon image" src="Images/laptopIcon.png"></a>
         <div class="desktopNav">
+            <ul class="ulDesktop">
             <li><a href="#ProjectsDesktop">Projects</a></li>
             <li><a href="#SkillDesktop">Skills</a></li>
             <li><a href="#aboutMeDesktop">About Me</a></li>
             <li><a href="#contactDesktop">Contact</a></li>
+            </ul>
         </div>
     </nav>
     <div class="menu-wrap">
@@ -51,23 +53,25 @@
         </header>
 
         <section id="ProjectsDesktop">
-            <h2 id="title">Projects</h2>
+            <h2 class="title">Projects</h2>
             <div class="projects">
                 <div class="project">
                     <h3>BookMe</h3>
-                    <div id="imageResize">
+                    <div class="imageResize">
                         <div class="middleDesktop">
-                            <a id="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
-                            <a id="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
+                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
+                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
                         </div>
 
-                        <img class="projectImg imgSize" id="carImg" src="./Images/BookMe.png">
+                        <img class="projectImg imgSize" alt="car image" class="carImg" src="./Images/BookMe.png">
                     </div>
                     <div class="skillSetUsed">
-                        <li id="skillsUsed">HTML5</li>
-                        <li id="skillsUsed">CSS3</li>
-                        <li id="skillsUsed">jQuery</li>
-                        <li id="skillsUsed">Ajax</li>
+                        <ul class="ulSkills">
+                            <li class="skillsUsed">HTML5</li>
+                            <li class="skillsUsed">CSS3</li>
+                            <li class="skillsUsed">jQuery</li>
+                            <li class="skillsUsed">Ajax</li>
+                        </ul>
                     </div>
                     <p>BookMe was my first application and it allows you to add your favorite or worst books
                         to an API where your bookmarks are saved. If you are trying to share your
@@ -75,32 +79,34 @@
                         practice.</p>
 
                         <div class="middle">
-                            <a id="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
-                            <a id="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
+                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
+                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
                         </div>
 
                 </div>
                 <div class="project">
                     <h3>Quiz App</h3>
-                    <div id="imageResize">
+                    <div class="imageResize">
                         <div id="Skills" class="middleDesktop">
-                            <a id="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
-                            <a id="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
+                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
+                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
                         </div>
-                        <img class="projectImg" id="carImg" src="./Images/Around The World.png">
+                        <img class="projectImg" alt="picture of a car" class="carImg" src="./Images/Around The World.png">
                     </div>
                     <div class="skillSetUsed">
-                        <li id="skillsUsed">HTML5</li>
-                        <li id="skillsUsed">CSS3</li>
-                        <li id="skillsUsed">jQuery</li>
+                        <ul class="ulSkills">
+                            <li class="skillsUsed">HTML5</li>
+                            <li class="skillsUsed">CSS3</li>
+                            <li class="skillsUsed">jQuery</li>
+                        </ul>
                     </div>
                     <p id="skills">Simple quiz application where you can test your car knowledge on where they
                         originate from. Built for anyone that wants to expand their car IQ and sound like a
                         pro when talking about cars.</p>
 
                     <div id="SkillsDesktop" class="middle">
-                        <a id="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
-                        <a id="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
+                        <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
+                        <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
                     </div>
 
                 </div>
@@ -108,7 +114,7 @@
         </section>
 
         <section id="SkillDesktop">
-            <h2 id="title">Skills</h2>
+            <h2 class="title">Skills</h2>
             <ul id="aboutMe" class="skills">
                 <img alt="html icon image" src="./Images/htmlIcon.png" class="skillsList">
                 <img alt="css icon image" src="./Images/cssIcon.png" class="skillsList">
@@ -118,7 +124,7 @@
         </section>
 
         <section id="aboutMeDesktop">
-            <h2 id="title">About Me</h2>
+            <h2 class="title">About Me</h2>
             <img id="aboutMeIcon" alt="icon of person" src="./Images/boy.png">
             <p id="aboutMeBio">
                 Hey there, my name is EJ Gonzalez. I am a passionate energetic coding enthusiast who
