fixed some css and no more html errors

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
                         </div>
 
-                        <img class="projectImg imgSize" alt="car image" class="carImg" src="./Images/BookMe.png">
+                        <img class="projectImg imgSize" alt="book image" src="./Images/BookMe.png">
                     </div>
                     <div class="skillSetUsed">
                         <ul class="ulSkills">
@@ -91,7 +91,7 @@
                             <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
                             <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
                         </div>
-                        <img class="projectImg" alt="picture of a car" class="carImg" src="./Images/Around The World.png">
+                        <img class="projectImg" alt="picture of a car" src="./Images/AroundTheWorld.png">
                     </div>
                     <div class="skillSetUsed">
                         <ul class="ulSkills">
@@ -114,13 +114,11 @@
         </section>
 
         <section id="SkillDesktop">
-            <h2 class="title">Skills</h2>
-            <ul id="aboutMe" class="skills">
-                <img alt="html icon image" src="./Images/htmlIcon.png" class="skillsList">
-                <img alt="css icon image" src="./Images/cssIcon.png" class="skillsList">
-                <img alt="javascript icon image" src="./Images/jsIcon.png" class="skillsList">
-                <img alt="jQuery icon image" src="./Images/jquery.png" class="skillsList" id="jqueryIcon">
-            </ul>
+            <h2 id="aboutMe" class="title">Skills</h2>
+            <img alt="html icon image" src="./Images/htmlIcon.png" class="skillsList">
+            <img alt="css icon image" src="./Images/cssIcon.png" class="skillsList">
+            <img alt="javascript icon image" src="./Images/jsIcon.png" class="skillsList">
+            <img alt="jQuery icon image" src="./Images/jquery.png" class="skillsList" id="jqueryIcon">
         </section>
 
         <section id="aboutMeDesktop">
@@ -141,16 +139,14 @@
             <h2 class="title">Contact</h2>
             <ul class="contact" id="contact">
                 <li id="email">email: ejg132@gmail.com</li>
-                <div class="contactIcon">
-                    <li><a href="https://github.com/EJ132?tab=repositories" target="_blank">
-                            <img alt="github icon image" src="./Images/githubIcon.png"></a>
-                    </li>
-                    <li><a alt="linkedIn icon image" href="https://www.linkedin.com/in/ej-gonzalez-2b1492187" target="_blank">
-                            <img alt="linked in icon" src="./Images/linkedinIcon.png"></a>
-                    </li>
-                </div>
-
             </ul>
+            <div class="contactIcon">
+                <a class="contactIcons" href="https://github.com/EJ132?tab=repositories" target="_blank">
+                    <img alt="github icon image" src="./Images/githubIcon.png"></a>
+            
+                <a class="contactIcons" href="https://www.linkedin.com/in/ej-gonzalez-2b1492187" target="_blank">
+                    <img alt="linked in icon" src="./Images/linkedinIcon.png"></a>
+            </div>
         </section>
     </main>
     <footer>&#169; EJ Gonzalez 2019</footer>
