updated portfolio projects and alignment of skills used

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                     </div>
                     <div class="skillSetUsed">
                         <ul class="ulSkills">
-                            <li class="skillsUsed">HTML5</li>
-                            <li class="skillsUsed">CSS3</li>
+                            <li class="skillsUsed">Html</li>
                             <li class="skillsUsed">jQuery</li>
-                            <li class="skillsUsed">Ajax</li>
+                            <li class="skillsUsed">Node.js</li>
+                            <li class="skillsUsed">SQL</li>
                         </ul>
                     </div>
                     <p>BookMe was my first application and it allows you to add your favorite or worst books
@@ -85,28 +85,29 @@
 
                 </div>
                 <div class="project">
-                    <h3>Quiz App</h3>
+                    <h3>Lost Puppers</h3>
                     <div class="imageResize">
                         <div id="Skills" class="middleDesktop">
-                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
-                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
+                            <a class="live" href="https://lostpuppers.netlify.com/" target="_blank">Live</a>
+                            <a class="repo" href="https://github.com/EJ132/ej-capstone-lost-puppers" target="_blank">Repo</a>
                         </div>
-                        <img class="projectImg" alt="picture of a car" src="./Images/AroundTheWorld.png">
+                        <img class="projectImg" alt="picture of a car" src="./Images/paw.png">
                     </div>
                     <div class="skillSetUsed">
                         <ul class="ulSkills">
-                            <li class="skillsUsed">HTML5</li>
-                            <li class="skillsUsed">CSS3</li>
-                            <li class="skillsUsed">jQuery</li>
+                            <li class="skillsUsed">React</li>
+                            <li class="skillsUsed">Node.js</li>
+                            <li class="skillsUsed">SQL</li>
                         </ul>
                     </div>
-                    <p id="skills">Simple quiz application where you can test your car knowledge on where they
-                        originate from. Built for anyone that wants to expand their car IQ and sound like a
-                        pro when talking about cars.</p>
+                    <p id="skills">Lost Puppers is an application made to help communities find their lost dogs. Even if you
+                        don't have a dog you can make money by finding other dogs. This site was built as a Full-Stack project to
+                        help practice with the flow of the real life application process.
+                    </p>
 
                     <div id="SkillsDesktop" class="middle">
-                        <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-Nandana-Quiz-App/" target="_blank">Live</a>
-                        <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-Nandana-Quiz-App" target="_blank">Repo</a>
+                        <a class="live" href="https://lostpuppers.netlify.com/" target="_blank">Live</a>
+                        <a class="repo" href="https://github.com/EJ132/ej-capstone-lost-puppers" target="_blank">Repo</a>
                     </div>
 
                 </div>
