switched the two projects so people can see the full stack one first

--- a/index.html
+++ b/index.html
@@ -56,58 +56,58 @@
             <h2 class="title">Projects</h2>
             <div class="projects">
                 <div class="project">
-                    <h3>BookMe</h3>
-                    <div class="imageResize">
-                        <div class="middleDesktop">
-                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
-                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
-                        </div>
-
-                        <img class="projectImg imgSize" alt="book image" src="./Images/BookMe.png">
-                    </div>
-                    <div class="skillSetUsed">
-                        <ul class="ulSkills">
-                            <li class="skillsUsed">Html</li>
-                            <li class="skillsUsed">jQuery</li>
-                            <li class="skillsUsed">Node.js</li>
-                            <li class="skillsUsed">SQL</li>
-                        </ul>
-                    </div>
-                    <p>BookMe was my first application and it allows you to add your favorite or worst books
-                        to an API where your bookmarks are saved. If you are trying to share your
-                        experience with a good or bad book visit the site. This was built for the sole purpose of
-                        practice.</p>
-
-                        <div class="middle">
-                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
-                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
-                        </div>
-
-                </div>
-                <div class="project">
                     <h3>Lost Puppers</h3>
                     <div class="imageResize">
-                        <div id="Skills" class="middleDesktop">
+                        <div class="middleDesktop">
                             <a class="live" href="https://lostpuppers.netlify.com/" target="_blank">Live</a>
                             <a class="repo" href="https://github.com/EJ132/ej-capstone-lost-puppers" target="_blank">Repo</a>
                         </div>
-                        <img class="projectImg" alt="picture of a car" src="./Images/paw.png">
+
+                        <img class="projectImg imgSize" alt="book image" src="./Images/paw.png">
                     </div>
                     <div class="skillSetUsed">
                         <ul class="ulSkills">
                             <li class="skillsUsed">React</li>
                             <li class="skillsUsed">Node.js</li>
-                            <li class="skillsUsed">SQL</li>
+                            <li class="skillsUsed">MySql</li>
+                            <li class="skillsUsed">Etc...</li>
                         </ul>
                     </div>
-                    <p id="skills">Lost Puppers is an application made to help communities find their lost dogs. Even if you
-                        don't have a dog you can make money by finding other dogs. This site was built as a Full-Stack project to
-                        help practice with the flow of the real life application process.
+                    <p>Lost Puppers is an application I made to help communities find their lost dogs. Even if you
+                        don't have a dog you can still help others by finding their dogs. This was my first Full-Stack project and was built to 
+                        help practice with the flow of the real life application process.</p>
+
+                        <div class="middle">
+                            <a class="live" href="https://lostpuppers.netlify.com/" target="_blank">Live</a>
+                            <a class="repo" href="https://github.com/EJ132/ej-capstone-lost-puppers" target="_blank">Repo</a>
+                        </div>
+
+                </div>
+                <div class="project">
+                    <h3>BookMe</h3>
+                    <div class="imageResize">
+                        <div id="Skills" class="middleDesktop">
+                            <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
+                            <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
+                        </div>
+                        <img class="projectImg" alt="picture of a car" src="./Images/BookMe.png">
+                    </div>
+                    <div class="skillSetUsed">
+                        <ul class="ulSkills">
+                            <li class="skillsUsed">Html</li>
+                            <li class="skillsUsed">Node.js</li>
+                            <li class="skillsUsed">jQuery</li>
+                        </ul>
+                    </div>
+                    <p id="skills">BookMe was my first application and it allows you to add your favorite or worst books
+                        to an API where your bookmarks are saved. If you are trying to share your
+                        experience with a good or bad book visit the site. This was built for the sole purpose of
+                        practice.
                     </p>
 
                     <div id="SkillsDesktop" class="middle">
-                        <a class="live" href="https://lostpuppers.netlify.com/" target="_blank">Live</a>
-                        <a class="repo" href="https://github.com/EJ132/ej-capstone-lost-puppers" target="_blank">Repo</a>
+                        <a class="live" href="https://thinkful-ei-gecko.github.io/EJ-BookmarkMe-App/" target="_blank">Live</a>
+                        <a class="repo" href="https://github.com/thinkful-ei-gecko/EJ-BookmarkMe-App" target="_blank">Repo</a>
                     </div>
 
                 </div>
